# career-conversations

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: clients.py  controllers.py  dependencies.py  main.py  modes.py  routes.py  services.py
backend/app/clients/: chatApiClient.py  mongoClient.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/assets/: github-icon.tsx  linkedin-icon.tsx  send-message.tsx
frontend/src/components/: chat-section.tsx  intro-section.tsx
frontend/src/components/chat-widget/: chat-history.tsx  index.tsx  message-input.tsx
frontend/src/hooks/: useSendMessage.ts
