[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "motor>=3.7.1",
    "openai>=1.104.2",
    "pymongo>=4.15.0",
]

[tool.uv.workspace]
members = [
    "my_fastapi_project",
]
